<resources>
    <string name="app_name">NotasApp</string>
    <string name="exposiciones">Exposiciones</string>
    <string name="practicas">Prácticas</string>
    <string name="proyecto">Proyecto</string>
    <string name="calcular">Calcular</string>
    <string name="notaFinal">Nota Final</string>
    <string name="titulo">Porcentajes (%)</string>
    <string name="guardar">Guardar</string>
    <string name="configurar">Configurar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="porcen">(%)</string>
    <string name="limpiar">Limpiar</string>

</resources>
